# graph

./: .gitignore  AGENTS.md  ALGORITHM.md  CLAUDE.md  README.md  pyproject.toml  qwen使用说明.md  qwen结构化输出.md  report_full_eval_analysis.md  report_progress_apr20.md  report_qa_analysis.md  report_qwen3_eval.md
artifacts/: README.md
configs/: README.md  build_memory.yaml  build_memory_dashscope.yaml  build_memory_dashscope_refine2_conv41.yaml  build_memory_dashscope_refine_conv41.yaml  build_memory_qwen3_local.yaml  build_remaining.yaml  graphmemory-qwen3-4b-32k.Modelfile  run_qa.yaml  run_qa_dashscope.yaml  run_qa_dashscope_f1fix.yaml  run_qa_dashscope_f1fix_v2.yaml  run_qa_dashscope_refine2_conv41.yaml  run_qa_dashscope_refine_conv41.yaml  run_qa_qwen3_local.yaml
data/: README.md
docs/: GraphMemory Agent(construction & retrieval).docx  evaluation_protocol.md  qa_prompt_comparison.md  refine2_proposition_layer.md  refine_graph_construction.md  report.md  report_full_eval_analysis.md  report_magma_qwen.md  report_memt_alignment.md  report_refine_retrieval_apr27.md
experiments/: README.md
runs/: README.md
scripts/: build_memory.py  export_qa_xlsx.py  import_locomo.py  recompute_memt_alignment.py  run_oracle_qa.py  run_qa.py  summarize_exp.py  summarize_graph_structure.py  summarize_retrieval_traces.py
tests/: test_dataset.py  test_graph_construction.py  test_graph_localize.py  test_graph_retrieval.py  test_graph_store.py  test_graph_trigger.py  test_llm_client.py  test_qa_filters.py  test_raw_archive.py  test_retrieval_trace_summary.py  test_storage.py
(+85 files in other folders)
