[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "graphmemory"
version = "0.1.0"
description = "Research-oriented storage scaffold for GraphMemory."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "duckdb>=1.1.0",
  "pyarrow>=16.0.0",
  "openai>=1.30.0",
  "chromadb>=0.5.0",
  "sentence-transformers>=3.0.0",
  "loguru>=0.7.0",
  "python-dotenv>=1.0.0",
  "pyyaml>=6.0",
  "tqdm>=4.66.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
